	* boards/wordsgame/wordslevel1.eu:
	* boards/wordsgame/wordslevel2.eu:
	* boards/wordsgame/wordslevelmax.eu:
	* configure.in:
	* docs/Makefile.am:
	* docs/checkScreenshots.sh:
	* docs/eu/.cvsignore:
	* docs/eu/Makefile.am:
	* docs/eu/gcompris.texi:
	* docs/eu/overview.dia:
	* docs/eu/overview.jpg:
	* docs/eu/python.xml:
	* docs/gcompris2spip.pl:
	* po/Makefile.in.in:
	* src/gcompris/config.c:

2005-09-12  Yves Combe,,,  <yves@ycombe.net>

	refuse --reread-menu if db is read-only.
	quote boards strings before inserting in db with sqlite3_mprintf.
	
	* src/gcompris/gcompris.c: (gcompris_init):
	* src/gcompris/gcompris_db.c: (gcompris_db_board_update),
	(gcompris_db_get_board_id):

2005-09-11  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed comilation option --disable-sqlite.
	Should work as expected now.

	Changed all original message to use &gt; and &lt; in .xml.in files.
	Not using them bugs the libxml2 parsing.
	I added them around all http://... reference because translators tend to use
	the form <http://...>
	now hopefully they will respect this syntax.

	* boards/algebra_guesscount.xml.in:
	* boards/chronos.xml.in:
	* boards/clickgame.xml.in:
	* boards/connect4.xml.in:
	* boards/erase.xml.in:
	* boards/erase_clic.xml.in:
	* boards/erase_double_clic.xml.in:
	* boards/hanoi_real.xml.in:
	* boards/sudoku.xml.in:
	* docs/create_thumbnails.pl:
	* docs/screenshots/billard_small.jpg:
	* docs/screenshots/hanoi_real.jpg:
	* docs/screenshots/hanoi_real_small.jpg:
	* src/gcompris/gameutil.c: (gcompris_add_xml_to_data),
	(gcompris_read_xml_file), (gcompris_load_menus_dir),
	(gcompris_load_menus):
	* src/gcompris/gcompris.c: (gcompris_init):
	* src/gcompris/gcompris_db.c: (gcompris_set_board_conf),
	(gcompris_get_conf_with_table), (gcompris_get_conf):

2005-09-11  Bruno coudoin  <bruno.coudoin@free.fr>

	Reworked icons by Bruno.
	
	* boards/boardicons/fifteen.png:
	* boards/boardicons/hanoi.png:
	* boards/boardicons/hanoi_real.png:
