@@ -1,6 +1,6 @@
 /* gcompris - help.c
  *
- * Time-stamp: <2004/10/27 00:16:59 bruno>
+ * Time-stamp: <2005/09/13 01:01:39 bruno>
  *
  * Copyright (C) 2000 Bruno Coudoin
  *
@@ -135,7 +135,17 @@ void gcompris_help_start (GcomprisBoard *gcomprisBoard)
   y = BOARDHEIGHT - (BOARDHEIGHT - gdk_pixbuf_get_height(pixmap))/2;
   gdk_pixbuf_unref(pixmap);
 
-  y_start += 40;
+  y_start += 5;
+  gnome_canvas_item_new (GNOME_CANVAS_GROUP(rootitem),
+			 gnome_canvas_text_get_type (),
+			 "text", gcomprisBoard->name,
+			 "font", gcompris_skin_font_board_tiny,
+			 "x", (double) BOARDWIDTH*0.10,
+			 "y", (double) y_start,
+			 "anchor", GTK_ANCHOR_NW,
+			 "fill_color_rgba", gcompris_skin_color_title,
+			 NULL);
+  y_start += 35;
   item = gnome_canvas_item_new (GNOME_CANVAS_GROUP(rootitem),
 				gnome_canvas_text_get_type (),
 				"text", name, 
