@@ -20,6 +20,8 @@
 	* docs/gcompris2spip.pl:
 	* po/Makefile.in.in:
 	* src/gcompris/config.c:
+	* src/gcompris/help.c: added name of the xml menu in the help (usefull to know
+	                       what activity is being run)
 
 2005-09-12  Yves Combe,,,  <yves@ycombe.net>
 
